--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "/"
+baseurl = "https://myblogdowntest.netlify.app/"
 languageCode = "en-us"
 title = "My awesome website"
 theme = "hugo-lithium"
